# my-leptos-pages-kit

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.js
.cargo/: config.toml
docs/: index.html  service-worker.js
docs/_app/: version.json
docs/_app/immutable/assets/: _layout.177663e8.css  _layout.4b5bbb87.css  _layout.8211865c.css  counter.7ce83abd.wasm  leptos_counter.30264516.wasm  leptos_counter.7ab947cc.wasm
docs/_app/immutable/chunks/: 0.ed28e857.js  1.0f4f2dfa.js  1.12528ef0.js  1.2f7b6e9b.js  1.6107b9ea.js  2.1f7d0c48.js  2.776194f6.js  2.aa4b5e77.js  2.e1211b21.js  index.7cf2deec.js  singletons.50b4b42a.js  singletons.5ea2ee9b.js  singletons.8d9fe5d8.js  singletons.90c11950.js  singletons.f22a7a77.js
docs/_app/immutable/entry/: _layout.svelte.a7647e36.js  _page.svelte.2fb6d642.js  _page.svelte.6a00ab3a.js  _page.svelte.832407bf.js  _page.svelte.89884e05.js  app.8e637bab.js  app.8f2e78f3.js  app.a52b88d6.js  app.b396573f.js  app.f46f22ce.js  error.svelte.2778ff51.js  error.svelte.5380589e.js  error.svelte.632aa0bb.js  error.svelte.f48bccb4.js  start.1d8dce74.js  start.3ad0d699.js  start.650ed7fd.js  start.94df6676.js  start.f02aee03.js
docs/_app/immutable/nodes/: 0.e73190b0.js  1.1a28f6c7.js  2.8bf4c53d.js
rust/: Cargo.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/src/: lib.rs  main.rs
src/routes/: +layout.js  +layout.svelte  +page.svelte
